src/test/deca/context/valid/SO/assignofassign.deca
// Description:
//    Programme minimaliste assignation d'assignation
//
// Resultats:
//    
//
// Historique:
//    cree le 07/01/2022
{
    int x;
    int tab =(x=12);
    float y = (x=13);
}