src/test/deca/context/invalid/SO/assignofassign.deca
// Description:
//    Programme minimaliste assignation d'assignation
//
// Resultats:
//    
//
// Historique:
//    cree le 07/01/2022
{
    float x;
    int tab =(x=12.0);
}